src/test/resources/failing/fail75.pnd
template Foo<A> {
    P(x) : int
	Q(x) <- P(x)
}
Foo<_> as F1
@output F1.Q2
